--- a/.github/workflows/build-docker-from-main.yaml
+++ b/.github/workflows/build-docker-from-main.yaml
@@ -36,5 +36,5 @@ jobs:
           context: .
           push: true
           tags: |
-            ghcr.io/${DOCKER_REPO}:latest
-            ghcr.io/${{ github.repository }}:${{ github.sha }}
+            ghcr.io/${{ env.DOCKER_REPO }}:latest
+            ghcr.io/${{ env.DOCKER_REPO }}:${{ github.sha }}
