--- a/.github/workflows/build-docker-from-main.yaml
+++ b/.github/workflows/build-docker-from-main.yaml
@@ -34,6 +34,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: |
             ghcr.io/${{ env.DOCKER_REPO }}:latest
